# echidna-mcp

./: .gitignore
.github/workflows/: ci.yml
echidna_agent/: .env.example  .gitignore  README.md  pyproject.toml
echidna_agent/src/echidna_agent/: config.py  db.py  server.py
echidna_agent/src/echidna_agent/agents/: base.py  fix_agent.py  fuzzer_opt_agent.py  report_summarizer.py  trend_analysis_agent.py  triage_agent.py
tests/echidna_agent/: conftest.py
tests/echidna_agent/integration/: test_server_integration.py
tests/echidna_agent/unit/: test_fix_agent.py  test_fuzzer_opt_agent.py  test_report_summarizer.py  test_trend_analysis_agent.py  test_triage_agent.py
tests/mcp/contracts/: BasicTest.sol
